--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Evento Já</string>
     <string name="eventos_titulo">Eventos</string>
     <string name="title_activity_maps">Mapa</string>
+    <string name="title_activity_maps2">Map</string>
 </resources>
