Projeto só está faltando resulver o problema de inserir vários itens toda vez que se conecta na internet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Evento Já</string>
     <string name="eventos_titulo">Eventos</string>
-    <string name="title_activity_maps">Mapa</string>
+    <string name="title_activity_fragment_maps">Mapa</string>
 </resources>
